--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+/**/*.cache
 /Library/
 /[Tt]emp/
-/[Oo]bj/
+/Obj/
 /[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
